# concurrent-ticket-booking

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README.md  RN_GUIDE_V1.md  RN_GUIDE_V2.md
backend/src/: main.rs
backend/src/booking/: booking.rs  domain.rs  handler.rs  mod.rs  routes.rs
cinema-mobile/: REANIMATED_GUIDE.md  app.json  babel.config.js  fetch-posters.mjs  movies.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
cinema-mobile/app/: _layout.tsx  index.tsx  login.tsx  movies.tsx  onboarding.tsx  seats.tsx
cinema-mobile/src/components/: BookingSheet.tsx  Marquee.tsx  MovieBelt.tsx  SeatCell.tsx  SeatGrid.tsx  SnapCarousel.tsx
cinema-mobile/src/data/: movies.ts
cinema-mobile/src/lib/: api.ts
cinema-mobile/src/stores/: appStore.ts
cinema-mobile/src/types/: index.ts
src/: main.rs
src/booking/: service.rs
