[package]
name = "concurrent-booking"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
redis = {version =  "0.28" , features = ['tokio-comp' , "aio"]}
tokio = { version = "1.52.3", features=["full"] }
serde = {version= "1.0.228" , features=['derive']}
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = {version = "1.23.3" , features=['v4']}
